--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "hbs": "~4.0.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "deferred": "^0.7.5",
+    "unirest": "^0.5.1"
   }
 }
